# tap-reader

./: .clang-tidy  CMakeLists.txt  README.md  task.sh
apps/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/tap-reader/: CMakeLists.txt  arg_parser.cpp  arg_parser.hpp  bin_to_hex.hpp  constants.hpp  format_frame.cpp  format_frame.hpp  frame.hpp  frame_formatter.hpp  get_time.cpp  get_time.hpp  tap_interface.cpp  tap_interface.hpp
tests/: CMakeLists.txt
tests/tap-reader/: CMakeLists.txt  format_frame_test.cpp  frame_formatter_test.cpp  hex_to_bin.hpp
